correct spacing

--- a/styles/components/_hero.scss
+++ b/styles/components/_hero.scss
@@ -47,7 +47,7 @@
       padding-bottom: 60px !important;
 
       @include media-breakpoint-down-md {
-        max-height: 300px;
+        max-height: 380px;
       }
 
       h1 {
